--- a/views/partials/base.jade
+++ b/views/partials/base.jade
@@ -2,12 +2,10 @@ doctype html
 html
   head
     title!= title
-    //- css : newlines needed for gulp-useref
     link(rel='stylesheet', href='/assets/app.css')
+    script(src='/assets/vendor.js')
+    script(src='/assets/app.js')
 
   body
     block content
-
-    script(src='/assets/app.js')
-    script(src='/vendor/jquery/dist/jquery.js')
 
