--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,11 +1,2 @@
-// Main.scss
-// This file is ONLY for imports and variables
-// see additional variables in bootstrap/_variables.scss
-
-@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap';
-
-$green:   #008000;
-
-.col-xs-12 {
-  background-color: $green;
-}
+@import 'bs';
+@import 'homepage';
