--- a/views/partials/base.pug
+++ b/views/partials/base.pug
@@ -2,10 +2,47 @@ doctype html
 html
   head
     title!= title
+    meta(charset='utf-8')
+
     link(rel='stylesheet', href='/assets/app.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css', integrity='sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M', crossorigin='anonymous')
+
+ 
 
   body
+
+   .container.test
+    nav.navbar.navbar-expand-lg.navbar-light
+     .row
+      .col-lg-12
+       a.navbar-brand(href='#')
+        img.d-inline-block.align-top.float-left(src='assets/images/logo.png',width='105',heigh='80' alt='waltt') 
+        h1.inline-block= 'Waltt Group'
+       .row.collapse.navbar-collapse
+      .col-lg-12
+       .navbar-nav.bg-dark
+        a.nav-item.nav-link(href='#') Home
+        a.nav-item.nav-link(href='#') About
+        a.nav-item.nav-link(href='#') Projects
+        a.nav-item.nav-link(href='#') Partners
+        a.nav-item.nav-link(href='#') News
+        a.nav-item.nav-link(href='#') Contact
+
+
     block content
+
+
+    footer.navbar.navbar-default.fixed-bottom.bg-dark
+     .container
+      .row
+       p='in'
+       p='info@waltt.ca 905-875-9851'
+       p='28 Fulton Way, Unit 200 Richmond Hill, L4B 1J5 Canada'
+       p='©2017 by Waltt Group.'
+
 
     script(src='/assets/vendor.js')
     script(src='/assets/app.js')
+    script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js', integrity='sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1', crossorigin="anonymous")
