--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -21,6 +21,10 @@ $brand-success:         #5cb85c !default;
 $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
 
+$nav-base:				rgb(190, 171, 142);
+$nav-text:				#ffffff;		
+$nav-text-hover:		rgb(240, 230, 158);
+
 
 //== Scaffolding
 //
