--- a/views/partials/base.pug
+++ b/views/partials/base.pug
@@ -11,38 +11,44 @@ html
 
   body
 
-   .container.test
-    nav.navbar.navbar-expand-lg.navbar-light
+   .banner
+    .container
+     nav.navbar.navbar-expand-lg.navbar-light
+      a.navbar-brand(href='#')
+       img.d-inline-block.align-top.float-left(src='assets/images/logo.png',width='105',heigh='80' alt='waltt') 
+       h1.inline-block= 'Waltt Group'
+   .banner.low
+    .container 
+     nav.navbar.navbar-expand-lg.navbar-light#nav-strip
+      .collapse.navbar-collapse
+       .navbar-nav
+        a.nav-item.nav-link#menu(href='#') Home
+        a.nav-item.nav-link#menu(href='#') About
+        a.nav-item.nav-link#menu(href='#') Projects
+        a.nav-item.nav-link#menu(href='#') Partners
+        a.nav-item.nav-link#menu(href='#') News
+        a.nav-item.nav-link#menu(href='#') Contact
+
+   
+   block content
+
+  
+   footer.footer.navbar.navbar-default.bg-light
+    .container
      .row
-      .col-lg-12
-       a.navbar-brand(href='#')
-        img.d-inline-block.align-top.float-left(src='assets/images/logo.png',width='105',heigh='80' alt='waltt') 
-        h1.inline-block= 'Waltt Group'
-       .row.collapse.navbar-collapse
-      .col-lg-12
-       .navbar-nav.bg-dark
-        a.nav-item.nav-link(href='#') Home
-        a.nav-item.nav-link(href='#') About
-        a.nav-item.nav-link(href='#') Projects
-        a.nav-item.nav-link(href='#') Partners
-        a.nav-item.nav-link(href='#') News
-        a.nav-item.nav-link(href='#') Contact
-
-
-    block content
-
-
-    footer.navbar.navbar-default.fixed-bottom.bg-dark
-     .container
-      .row
+      .col-md-4
        p='in'
+      .col-md-4 
        p='info@waltt.ca 905-875-9851'
+      .col-md-4
        p='28 Fulton Way, Unit 200 Richmond Hill, L4B 1J5 Canada'
+   .footer.bg-dark
+    .container 
        p='©2017 by Waltt Group.'
 
 
-    script(src='/assets/vendor.js')
-    script(src='/assets/app.js')
-    script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js', integrity='sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1', crossorigin="anonymous")
+   script(src='/assets/vendor.js')
+   script(src='/assets/app.js')
+   script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
+   script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
+   script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js', integrity='sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1', crossorigin="anonymous")
