--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -24,6 +24,7 @@ $brand-danger:          #d9534f !default;
 $nav-base:				rgb(190, 171, 142);
 $nav-text:				#ffffff;		
 $nav-text-hover:		rgb(240, 230, 158);
+$header-base:			#ffffff;
 
 
 //== Scaffolding
