--- a/views/index.pug
+++ b/views/index.pug
@@ -15,10 +15,32 @@ block content
      h1.header-home-black= "Our Services"
 
    .row
-    .col-md-4
+    .col-md-4.col-sm-4
      i.fa.fa-camera-retro.fa-4x
      |icon 
-     h2.subheader= "Real Estate Development"
+     h2.subheader.text-center= "Real Estate Development"
+     p.text-left
+      |Own a property and wish to extract its full financial potential?  Waltt has accumulated extensive experience in both residential and commercial real estate development. Being highly efficient in site planning, budgeting, financing and construction makes Waltt an ideal partner to cooperate with and build a brighter future together.
+
+    .col-md-4.col-sm-4
+     i.fa.fa-camera-retro.fa-4x
+     |icon 
+     h2.subheader.text-center= "Project Management" 
+     p.text-left
+      |Have a project already in the works and not fully versed in construction, we can  effectively manage your project from inception to completion. We offer technical, administrative and financial management with a high expertise to help clients achieve their goals on time and within budget.
+
+    .col-md-4.col-sm-4
+     i.fa.fa-camera-retro.fa-4x
+     |icon 
+     h2.subheader.text-center= "Marketing & Sales" 
+     p.text-left
+      |By researching and tracking market trends, we provide customized marketing and sales solutions that fit our client’s needs. From luxury high-rises to commercial properties, we can always find the best marketing strategies to increase your sales.
+
+   .row
+    .col-md-12.text-center
+     button.btn.btn-dark.btn-lg.text-uppercase
+      |Contact Us
+
 
       
     .row
