--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -25,6 +25,7 @@ $nav-base:				rgb(190, 171, 142);
 $nav-text:				#ffffff;		
 $nav-text-hover:		rgb(240, 230, 158);
 $header-base:			#ffffff;
+$home-icon:				rgb(191, 165, 125);
 
 
 //== Scaffolding
