--- a/views/index.pug
+++ b/views/index.pug
@@ -15,56 +15,64 @@ block content
      h1.header-home-black= "Our Services"
 
    .row
-    .col-md-4.col-sm-4
-     i.fa.fa-camera-retro.fa-4x
-     |icon 
-     h2.subheader.text-center= "Real Estate Development"
-     p.text-left
+    .col-md-4.col-sm-12.text-center
+     i.fa.fa-home.fa-5x.home-icon(aria-hidden='true',alt='realty_development')
+     h2.subheader= "Real Estate Development"
+     p.text-left.home-service
       |Own a property and wish to extract its full financial potential?  Waltt has accumulated extensive experience in both residential and commercial real estate development. Being highly efficient in site planning, budgeting, financing and construction makes Waltt an ideal partner to cooperate with and build a brighter future together.
 
-    .col-md-4.col-sm-4
-     i.fa.fa-camera-retro.fa-4x
-     |icon 
-     h2.subheader.text-center= "Project Management" 
-     p.text-left
+    .col-md-4.col-sm-12.text-center
+     i.fa.fa-calendar.fa-5x.home-icon(aria-hidden='true',alt='project-management')
+     h2.subheader= "Project Management" 
+     p.text-left.home-service
       |Have a project already in the works and not fully versed in construction, we can  effectively manage your project from inception to completion. We offer technical, administrative and financial management with a high expertise to help clients achieve their goals on time and within budget.
 
-    .col-md-4.col-sm-4
-     i.fa.fa-camera-retro.fa-4x
-     |icon 
-     h2.subheader.text-center= "Marketing & Sales" 
-     p.text-left
+    .col-md-4.col-sm-12.text-center
+     i.fa.fa-line-chart.fa-5x.home-icon(aria-hidden='true',alt='marketing_sales')
+     h2.subheader= "Marketing & Sales" 
+     p.text-left.home-service
       |By researching and tracking market trends, we provide customized marketing and sales solutions that fit our client’s needs. From luxury high-rises to commercial properties, we can always find the best marketing strategies to increase your sales.
 
    .row
     .col-md-12.text-center
-     button.btn.btn-dark.btn-lg.text-uppercase
+     button.btn.btn-dark.btn-lg.text-uppercase#btn-home-service
       |Contact Us
+  
+  .back-image-home-story
+   .container.text-center
+    h1
+     |OUR STORY
+    p.text-left.d-inline-block
+     |Waltt Group Inc., founded in 1992 and headquartered in Toronto, ON, Canada is an investment company with a diversified portfolio spanning a multitude of industries across the Globe. Waltt Group is constantly expanding with investments in a variety of industries including, but not limited to, real estate development, healthcare, and international trading. Waltt prides itself in achieving our mission statement of "Improving lifestyle through industry".
 
+  .container
+   .row
+    .col-md-12.text-center
+     h1.header-home-black= 'OUR PROJECTS'
+   .project-box
+    .row
+     .col-md-6
+      img.img-thumbnail(src='assets/images/contessa.jpg')
+     .col-md-6
+      img.img-thumbnail(src='assets/images/winery.jpg')
+    .row
+     .col-md-6
+      img.img-thumbnail(src='assets/images/innisfil.jpg')
+     .col-md-6
+      img.img-thumbnail(src='assets/images/bradford.jpg') 
+  
+  .back-image-home-partner
+   .container.text-center
+    h1= 'OUR PARTNERS'
+   .row
+    .col-md-4.col-sm-12
+     img(src='assets/images/magnum-logo.png')
+     h2= 'magum projects'
+    .col-md-4.col-sm-12
+     img(src='assets/images/pure-west-logo.png')
+     h2= 'Pure West'
+    .col-md-4.col-sm-12
+     img(src='assets/images/Weston-Brand-logo.jpg')
+     h2= 'Weston Consulting'
 
-      
-    .row
-      .sm-col-12
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    .row
-      .sm-col-12
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    .row
-      .sm-col-12
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-    .row
-      .sm-col-12
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-    .row
-      .sm-col-12
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-    .row
-      .col-md-12
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    .row
-      .sm-col-12
-        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  
