--- a/views/partials/base.pug
+++ b/views/partials/base.pug
@@ -6,7 +6,7 @@ html
 
     link(rel='stylesheet', href='/assets/app.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css', integrity='sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M', crossorigin='anonymous')
-    link(rel='stylesheet', href='app/font-awesome/css/font-awesome.min.css')
+    link(rel='stylesheet', href='assets/images/font-awesome-4.7.0/css/font-awesome.min.css')
 
  
 
@@ -38,8 +38,8 @@ html
     footer.footer.bg-light#footer-up
      .container
       .row
-       .col-md-4
-        p.text-center='in'
+       .col-md-4.text-center
+        i.fa.fa-linkedin.fa-lg
        .col-md-4 
         p.text-center='info@waltt.ca 905-875-9851'
        .col-md-4
