--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -21,6 +21,14 @@
   background-size: cover;
 }
 
+//== MISC (buttons,etc.)
+
+#btn-home-service {
+  border-radius: 0;
+  padding: 10px 30px;
+  margin-bottom: 40px;
+}
+
 //== header classes
 
 .banner {
@@ -39,7 +47,7 @@
   margin-bottom: 0;
 }
 
-#menu{
+#menu {
   color: $nav-text;
   font-size: 1.3em;
   &:hover, &:focus {
@@ -53,7 +61,7 @@
   background-color: $nav-text;
 }
 
-#header-text{
+#header-text {
   margin-top: 10%;
   text-indent: 18px;
   font-size: 3em;
@@ -78,7 +86,7 @@ body {
 .banner-image-home {
   @extend %parallax;	
 	/* The image used */
-  background-image: url("images/banner-home.jpg");
+  background-image: url('images/banner-home.jpg');
 
     /* Set a specific height */
   //height: 835px;
@@ -111,7 +119,61 @@ body {
 
 .header-home-black {
   font-size: 4.5em;
-  margin: 30px auto 50px auto;
+  margin: 30px auto 50px;
+}
+
+.home-icon {
+  color: $home-icon;
+  padding-bottom: 15px;
+}
+
+.home-service {
+  font-size: 1.5em;
+  margin: 15px auto 30px;
+}
+
+.back-image-home-story {
+  @extend %parallax;	
+	/* The image used */
+  background-image: url('images/background-story.jpg');
+
+  margin-bottom: 10px; 
+
+  .container {
+    color: $header-base;
+    padding: 40px 0;
+
+    h1 {
+      font-size: 4.5em;
+    }
+
+    p {
+      font-size: 2.2em;
+      width: 60%;
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+  }
+}
+
+.project-box {
+  width: 80%;
+  margin: 0 auto 40px;
+
+  img {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+.back-image-home-partner {
+  @extend .back-image-home-story;
+  background-image: none;
+  background-color: black;
+
+  img {
+    width: 35%;
+  }
 }
 
 //== footer classes
