--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -26,6 +26,9 @@ $nav-text:				#ffffff;
 $nav-text-hover:		rgb(240, 230, 158);
 $header-base:			#ffffff;
 $home-icon:				rgb(191, 165, 125);
+$home-partner-back:		rgb(24, 24, 24);
+
+$box-about: 			rgb(240, 240, 240);
 
 
 //== Scaffolding
@@ -33,7 +36,7 @@ $home-icon:				rgb(191, 165, 125);
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               #fff !default;
+$body-bg:               #ffffff !default;
 //** Global text color on `<body>`.
 $text-color:            $gray-dark !default;
 
