--- a/views/partials/base.pug
+++ b/views/partials/base.pug
@@ -16,7 +16,7 @@ html
      .banner
       .container
        nav.navbar.navbar-expand-lg.navbar-light
-        a.navbar-brand(href='#')
+        a.navbar-brand(href='/')
          img.d-inline-block.align-top.float-left(src='assets/images/logo.png',width='105',heigh='80' alt='waltt_logo') 
          h1.inline-block#header-text= 'Waltt Group'
      .banner.low
@@ -24,9 +24,9 @@ html
        nav.navbar.navbar-expand-lg.navbar-light#nav-strip
         .collapse.navbar-collapse
          .navbar-nav
-          a.nav-item.nav-link#menu(href='#') Home
-          a.nav-item.nav-link#menu(href='#') About
-          a.nav-item.nav-link#menu(href='#') Projects
+          a.nav-item.nav-link#menu(href='/') Home
+          a.nav-item.nav-link#menu(href='/about') About
+          a.nav-item.nav-link#menu(href='/projects') Projects
           a.nav-item.nav-link#menu(href='#') Partners
           a.nav-item.nav-link#menu(href='#') News
           a.nav-item.nav-link#menu(href='#') Contact 
@@ -35,13 +35,14 @@ html
      block content 
 
    
-    footer.footer.bg-light#footer-up
+    footer.footer#footer-up
      .container
       .row
        .col-md-4.text-center
         i.fa.fa-linkedin.fa-lg
        .col-md-4 
-        p.text-center='info@waltt.ca 905-875-9851'
+        p.text-center='info@waltt.ca' 
+        p.text-center='905-875-9851'
        .col-md-4
         p.text-center='28 Fulton Way, Unit 200' 
         p.text-center='Richmond Hill, L4B 1J5 Canada'
