--- a/views/index.pug
+++ b/views/index.pug
@@ -35,8 +35,9 @@ block content
 
    .row
     .col-md-12.text-center
-     button.btn.btn-dark.btn-lg.text-uppercase#btn-home-service
-      |Contact Us
+     a(href='/contact')
+      button.btn.btn-dark.btn-lg.text-uppercase#btn-home-service
+       |Contact Us
   
   .back-image-home-story
    .container.text-center
@@ -75,7 +76,8 @@ block content
       .col-md-4.col-sm-12.partner
        img(src='assets/images/Weston-Brand-logo.jpg')
        h2.partner-name= 'Weston Consulting'
-    button.btn.btn-dark.btn-lg.text-uppercase#btn-home-partner
-     |View All
+    a(href='/partners')
+     button.btn.btn-dark.btn-lg.text-uppercase#btn-home-partner
+      |View All
 
  
