--- a/views/partials/base.pug
+++ b/views/partials/base.pug
@@ -4,6 +4,7 @@ html
     title!= title
     meta(charset='utf-8')
 
+    link(rel='icon', type='image/png', href='/assets/images/favicon.png', sizes='16x16')
     link(rel='stylesheet', href='/assets/app.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css', integrity='sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M', crossorigin='anonymous')
     link(rel='stylesheet', href='assets/images/font-awesome-4.7.0/css/font-awesome.min.css')
@@ -27,9 +28,9 @@ html
           a.nav-item.nav-link#menu(href='/') Home
           a.nav-item.nav-link#menu(href='/about') About
           a.nav-item.nav-link#menu(href='/projects') Projects
-          a.nav-item.nav-link#menu(href='#') Partners
-          a.nav-item.nav-link#menu(href='#') News
-          a.nav-item.nav-link#menu(href='#') Contact 
+          a.nav-item.nav-link#menu(href='/partners') Partners
+          a.nav-item.nav-link#menu(href='/news') News
+          a.nav-item.nav-link#menu(href='/contact') Contact 
 
     .body-page
      block content 
