--- a/app/sass/projects.scss
+++ b/app/sass/projects.scss
@@ -4,6 +4,7 @@
 @import 'main';
 @import 'about';
 
+//== for Projects page
 .banner-projects {
   @extend .banner-about;
 
@@ -27,6 +28,7 @@
   }
 }
 
+//== for Partner page
 .banner-partners {
   @extend .banner-about;
 
@@ -43,6 +45,7 @@
   }
 }
 
+//== for News page
 .news-box {
   @extend .project-box;
   text-transform: uppercase;
@@ -52,6 +55,21 @@
     text-decoration: none;
     color: inherit;
     font-size: 1.7em;
-    align: bottom;
+    
+  }
+}
+
+//== for Contact page
+.contact-box {
+  margin-top: 30px;
+
+  h1 {
+    font-size: 4em;
+    margin-bottom: 30px;
+  }
+
+  h2 {
+    line-height: 1.75em;
+    font-weight: 0;
   }
 }
