--- a/views/partials/base.pug
+++ b/views/partials/base.pug
@@ -18,7 +18,7 @@ html
       .container
        nav.navbar.navbar-expand-lg.navbar-light
         a.navbar-brand(href='/')
-         img.d-inline-block.align-top.float-left(src='assets/images/logo.png',width='105',heigh='80' alt='waltt_logo') 
+         img.d-inline-block.align-top.float-left(src='assets/images/logo.png', width='105', heigh='80', alt='waltt_logo') 
          h1.inline-block#header-text= 'Waltt Group'
      .banner.low
       .container 
